# Ringil

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.toml  flake.nix  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: build-check.yaml  check-format.yaml  ros2.yaml
crates/ringil-bridge/: Cargo.toml
crates/ringil-bridge/src/: main.rs
crates/ringil-communication/: Cargo.toml  build.rs
crates/ringil-communication/proto/: ringil.rs  zenoh.proto
crates/ringil-communication/src/net/: crypto.rs  mod.rs  node.rs
crates/ringil-communication/src/protocol/: buffer.rs  builder.rs  embedding.rs  mod.rs  pb.rs
crates/ringil-daemon/: Cargo.toml
crates/ringil-daemon/src/: config.rs  main.rs
crates/ringil-instinct/: Cargo.toml
crates/ringil-instinct/src/: lib.rs  pipeline.rs
crates/ringil-instinct/src/models/buffalo/: detection.rs  mod.rs  utils.rs  warp.rs
crates/ringil-instinct/src/tracking/: bytetrack.rs
crates/ringil-mavlink/: Cargo.toml
crates/ringil-mavlink/src/: connection.rs  control.rs  lib.rs
crates/ringil-perception/: Cargo.toml
crates/ringil-perception/src/: events.rs  lib.rs  main.rs  pipeline.rs
crates/ringil-perception/src/camera/: mod.rs
crates/ringil-perception/src/models/: mod.rs  yolo.rs
crates/ringil-perception/src/models/buffalo/: mod.rs  types.rs  utils.rs
crates/ringil-perception/src/tracking/: bytetrack.rs
crates/ringil-perception/tests/: pipeline_tests.rs
crates/ringil-spirit/: Cargo.toml
crates/ringil-spirit/src/: lib.rs
crates/ringil-spirit/src/ros/: messages.rs
infrastructure/docker/: compose.yaml
infrastructure/nix/: flake.nix
infrastructure/nix/hardware/: cuda-tensorrt.nix  jetson.nix  px4-interfaces.nix
infrastructure/nix/machines/dev/: default.nix
infrastructure/nix/machines/dev-drone/: default.nix
infrastructure/nix/machines/prod/: default.nix
infrastructure/nix/machines/prod-swarm/: default.nix
infrastructure/nix/machines/sim/: default.nix
infrastructure/nix/modules/core/: bootloader.nix  env.nix  filesystems.nix  rt.nix
infrastructure/nix/modules/network/: galadril-link.nix
infrastructure/nix/modules/observability/: logs.nix  metrics.nix
infrastructure/nix/modules/ringil/: dora-cli.nix  package.nix  ringil-bringup.nix  ros2.nix  service.nix
infrastructure/nix/modules/security/: anssi-kernel.nix  lockdown.nix  tpm-wg.nix  tpm2.nix  users.nix
infrastructure/nix/profiles/: dev.nix  prod.nix
models/: setup_models.sh
ros2/: README.md  ego_planner.yaml  isaac_ros_vslam.yaml  package.xml  setup.py
ros2/config/: nvblox.yaml
ros2/launch/: autonomy.launch.py
ros2/src/ringil_bringup/: package.xml  setup.py
ros2/src/ringil_bringup/config/: as2_platform_pixhawk.yaml  as2_state_estimator.yaml  control_modes.yaml  ego_planner.yaml  isaac_ros_vslam.yaml  nvblox.yaml  rtabmap.yaml
ros2/src/ringil_bringup/launch/: autonomy.launch.py
