[workspace]
resolver = "3"
members = [
    "crates/ringil-bridge",
    "crates/ringil-communication",
    "crates/ringil-mavlink",
    "crates/ringil-perception",
    # "crates/ringil-spirit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = ""
repository = "https://github.com/RealHinome/Ringil"

[workspace.dependencies]
flume = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
