<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format3>
  <name>ringil_bringup</name>
  <version>0.0.1</version>
  <description>Launch Ringil (VSLAM, RTAB-Map, nvblox et Nav2)</description>

  <maintainer email="aeluin@gravitalia.com">Aeluin Technologies</maintainer>
  <license>AGPL3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>nvblox_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
