[package]
name = "ringil-communication"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = "0.14"
prost-types = "0.14"
zenoh = "1.9"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[build-dependencies]
prost-build = "0.14"
