[package]
name = "ringil-insinct"
description = "AI pipline for drone."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
ort = { git = "https://github.com/pykeio/ort.git", rev = "f085e4c2516901ee606d1e10022142afa9348bf1", features = ["tensorrt", "cuda", "coreml"] }
ultralytics-inference = { git = "https://github.com/ultralytics/inference.git", features = ["tensorrt", "cuda", "coreml"] }
gstreamer = "0.25"
gstreamer-app = "0.25"
image = "0.25"
fast_image_resize = "6.0"
ndarray = "0.17"
nalgebra = "0.34"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
