[package]
name = "ringil-mavlink"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full", "sync"] }
mavlink = { version = "0.12", features = ["common"] }
tracing = "0.1"
ringil-instinct = { path = "../ringil-instinct" }
nalgebra = "0.34"
