[package]
name = "ringil-perception"
description = "AI pipline for drone."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre = "0"
tokio = { version = "1", features = ["full"] }
flume = { workspace = true }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

arrow = "58.3"
dora-node-api = "0.5"
gstreamer = "0.25"
gstreamer-app = "0.25"

ort = { version = "2.0.0-rc.12", features = ["tensorrt", "cuda"] }
ultralytics-inference = { version = "0.0.15", features = ["tensorrt", "cuda"] }
image = "0.25"
fast_image_resize = "6.0"
ndarray = "0.17"
nalgebra = "0.34"

[dev-dependencies]
ffmpeg-next = "8"
imageproc = "0.26"
ab_glyph = "0.2.32"
dejavu = "2.37"
